test/fail/use-before-define4.as
let f = func() : Int {g ()};
let g = func() : Int {x};
assert(f() == 1);
let x = 1;
